--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,13 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="/favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<script>
+		const prefersDark = window.matchMedia('(prefers-color-scheme: dark)');
+		const preferred = prefersDark && prefersDark.matches ? 'dark' : 'light';
+		const current = (localStorage && localStorage.theme) ?? preferred;
+		const html = document.querySelector('html');
+		html.classList.add(current);
+	</script>
 	%svelte.head%
 </head>
 
