:mag: Add meta tags

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,14 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="/favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="theme-color" content="#ffffff">
+	<meta name="description" content="laymonage is Sage M. Abdullah. I build up and break down stuff in the open.">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="laymonage">
+	<meta property="og:description" content="laymonage is Sage M. Abdullah. I build up and break down stuff in the open.">
+	<meta property="og:image" content="/logo-192.png">
+	<meta name="twitter:card" content="summary">
 	<script>
 		const prefersDark = window.matchMedia('(prefers-color-scheme: dark)');
 		const preferred = prefersDark && prefersDark.matches ? 'dark' : 'light';
